# aqara-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-homebrew.yml  tests.yml
src/aqara_cli/: __init__.py  api.py  config.py  main.py
tests/: test_cli.py
