[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqara-cli"
version = "0.1.0"
description = "Command-line client for the Aqara Open Cloud API (homes, devices, rooms, scenes)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Omar Shahine" }]
keywords = ["aqara", "smart-home", "homekit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = ["click>=8.1"]

[project.urls]
Homepage = "https://github.com/omarshahine/aqara-cli"
Issues = "https://github.com/omarshahine/aqara-cli/issues"

[project.scripts]
aqara = "aqara_cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/aqara_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100
